@@ -1,0 +1,1 @@
+DIST deluge-1.3.7.tar.bz2 1741155 SHA256 b55ad9ed7a3281927508f2eb37560fc50e34012d4ecc05020290568fe7a3a51e SHA512 8c78fd3d39541ff5bbefaaf8d7e9a673f5b14b5da1c5130250e85df9a2a846aa30b99eb5a03bc47b6dbb5abb890997c3405f3c3e0ee89adeab6e6e3805cbd3a7 WHIRLPOOL b647d4fe703411ccc085b457272d611e3e0b96cf23493e88bad379c371293ba7532b5f3a7d119547afeb643f3984d58e3f5a39dc71d7cfe58784fa5409602e7e
