@@ -1,3 +1,8 @@
+*deluge-1.3.7 (31 Aug 2014)
+
+  31 Aug 2014; Poncho <poncho@spahan.ch> +deluge-1.3.7.ebuild:
+  net-p2p/deluge: add stable version
+
   13 Jul 2014; Poncho <poncho@spahan.ch> deluge-9999.ebuild:
   net-p2p/deluge: overwrite _distutils-r1_create_setup_cfg
 
